--- a/Game.ini
+++ b/Game.ini
@@ -1,7 +1,7 @@
 [Game]
 Library=RGSS104E.dll
 Scripts=Data\Scripts.rxdata
-Title=Pokemon Essentials v21.1
+Title=Pokemon Light Platinum
 RTP1=
 RTP2=
 RTP3=
